--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "keywords": [
     "yeoman-generator",
     "jhipster-blueprint",
-    "jhipster-5"
+    "jhipster-7"
   ],
   "homepage": "https://github.com/lnngle/generator-jhipster-lnngle",
   "author": {
@@ -22,24 +22,24 @@
     "url": "git+https://github.com/lnngle/generator-jhipster-lnngle.git"
   },
   "dependencies": {
-    "chalk": "2.4.1",
+    "chalk": "4.1.2",
     "generator-jhipster": "7.4.1"
   },
   "devDependencies": {
-    "chai": "4.1.2",
-    "ejs-lint": "0.3.0",
-    "eslint": "5.0.0",
-    "eslint-config-airbnb-base": "13.0.0",
-    "eslint-config-prettier": "3.1.0",
-    "eslint-plugin-import": "2.12.0",
-    "eslint-plugin-prettier": "3.0.0",
-    "fs-extra": "6.0.1",
-    "jsdoc": "3.5.5",
-    "mocha": "5.2.0",
-    "prettier": "1.14.3",
-    "sinon": "6.0.0",
+    "chai": "4.3.4",
+    "ejs-lint": "1.2.1",
+    "eslint": "8.2.0",
+    "eslint-config-airbnb-base": "15.0.0",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-import": "2.25.3",
+    "eslint-plugin-prettier": "4.0.0",
+    "fs-extra": "10.0.0",
+    "jsdoc": "3.6.7",
+    "mocha": "9.1.3",
+    "prettier": "2.4.1",
+    "sinon": "12.0.1",
     "yeoman-assert": "3.1.1",
-    "yeoman-test": "1.7.2"
+    "yeoman-test": "6.2.0"
   },
   "scripts": {
     "lint": "eslint .",
@@ -56,5 +56,9 @@
   "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/lnngle/generator-jhipster-lnngle/issues"
+  },
+  "engines": {
+    "node": "^12.20.0 || ^14.13.1 || >=16.0.0",
+    "npm": ">=6.14.4"
   }
 }
