--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "generator-jhipster-lnngle",
   "version": "0.0.0",
-  "description": "lnngle generator",
+  "description": "lnngle",
   "keywords": [
     "yeoman-generator",
     "jhipster-blueprint",
@@ -22,24 +22,26 @@
     "url": "git+https://github.com/lnngle/generator-jhipster-lnngle.git"
   },
   "dependencies": {
-    "chalk": "4.1.2",
-    "generator-jhipster": "7.4.1"
+    "chalk": "2.4.1",
+    "generator-jhipster": "7.6.0"
   },
   "devDependencies": {
-    "chai": "4.3.4",
-    "ejs-lint": "1.2.1",
-    "eslint": "8.2.0",
-    "eslint-config-airbnb-base": "15.0.0",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-import": "2.25.3",
-    "eslint-plugin-prettier": "4.0.0",
-    "fs-extra": "10.0.0",
-    "jsdoc": "3.6.7",
-    "mocha": "9.1.3",
-    "prettier": "2.4.1",
-    "sinon": "12.0.1",
+    "chai": "4.3.0",
+    "ejs-lint": "1.1.0",
+    "eslint": "7.21.0",
+    "eslint-config-airbnb-base": "14.2.1",
+    "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-chai-friendly": "^0.6.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-mocha": "8.0.0",
+    "eslint-plugin-prettier": "3.3.1",
+    "fs-extra": "9.1.0",
+    "jsdoc": "3.6.6",
+    "mocha": "8.3.0",
+    "prettier": "",
+    "sinon": "9.2.4",
     "yeoman-assert": "3.1.1",
-    "yeoman-test": "6.2.0"
+    "yeoman-test": "5.0.1"
   },
   "scripts": {
     "lint": "eslint .",
@@ -54,12 +56,7 @@
     "release:major": "npm version major -a -m \"Update to %s\" && npm run release"
   },
   "license": "Apache-2.0",
-
   "bugs": {
     "url": "https://github.com/lnngle/generator-jhipster-lnngle/issues"
-  },
-  "engines": {
-    "node": "^12.20.0 || ^14.13.1 || >=16.0.0",
-    "npm": ">=6.14.4"
   }
 }
