--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-prettier": "3.3.1",
     "fs-extra": "9.1.0",
     "jsdoc": "3.6.6",
+    "lodash": "4.17.21",
     "mocha": "8.3.0",
     "prettier": "",
     "sinon": "9.2.4",
